    out.

  o CHANGE: Hydrogen representation now thin and grey monotone.

  o CHANGE: Interface to sidechain docking improved [Phil Evans].

  o CHANGE: Updates to sync with new EDS (Electron Density Server).

  o CHANGE: Filenames of mtzs and pdb in the current directory are now
    stored as relative in the state file [Andre White].

  o CHANGE: Default image type now PNG [Joel Bard].

  o BUG-FIX: Check waters by difference map now works again [Misty X].

  o BUG-FIX: SSM alignment crash fixed [Ed Pozharski].

  o BUG-FIX: Splitting a sidechain with zero occupancy no longer
    leaves atoms with negative occupancy [Takaaki Fukami].
  
  o BUG-FIX: Shift-spacing through waters, deleting active water now
    goes to previous atom [Ingo Korndoerfer].

  o BUG-FIX: No torsion restraints added when the esd of the torsion
    is 0 (Phenix compatibility) [Joel Bard].

  o BUG-FIX: Rotamers and Edit Chi now works for MSEs [Clemens Vonrhein].

  o BUG-FIX: Hydrogen environment distances now are synchronised with
    the display of hydrogens [JED].

  o BUG-FIX: Phosphate-backbone mode enabled for symmetry [Miguel
    Ortiz Lombardia].

  o BUG-FIX: Carbon-Iodine bond length limit lengthened.

  o BUG-FIX: Go To Atom dialog is updated after simple mutation of a
    base.

-----

  Release 0.6

  o FEATURE: User-defined clicks [Joel Bard].

  o FEATURE: SHELXL interfaces allows the user to modify the input before
    running the SHELXL executable [Tobias Beck].

  o FEATURE: Now compatible with Zalman M220W.

  o FEATURE: Post-manipulation function hook added [JED].

  o FEATURE: "Sphere" (residue selection) refinement.

  o FEATURE: function to (re-)calculate probe dots around a give point
    [Joel Bard].

  o FEATURE: monomer and residue selection dipoles.

  o FEATURE: Interactive map sharpening [Randy Read, Alex Brunger].

  o FEATURE: LINK bonds are are now represented.

  o FEATURE: "Backrub rotamers" at low (2.7 or worse) resolution.
